finished  and add env for try compose up
